# goodman_lamps

./: .gitignore  .readthedocs.yaml  README.md  environment.yml  readthedocs.yml  requirements.txt  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst  issues.rst  plots_1200.rst  plots_2100.rst  plots_400.rst  plots_600.rst  plots_930.rst  requirements.txt
docs/plots/: plot_1200m0.py  plot_1200m1.py  plot_1200m2.py  plot_1200m3.py  plot_1200m4.py  plot_1200m5.py  plot_1200m6.py  plot_1200m7.py  plot_2100_650.py  plot_400m1.py  plot_400m2.py  plot_600Blue.py  plot_600Mid.py  plot_600Red.py  plot_600UV.py  plot_930m1.py  plot_930m2.py  plot_930m3.py  plot_930m4.py  plot_930m5.py  plot_930m6.py
docs/source/: conf.py  index.rst  plots_1200.rst  plots_600.rst
docs/source/plots/: plot_1200m0.py  plot_1200m1.py  plot_1200m2.py  plot_1200m3.py  plot_1200m4.py  plot_1200m5.py  plot_1200m6.py  plot_1200m7.py  plot_400m1.py  plot_400m2.py  plot_600Blue.py  plot_600Mid.py  plot_600Red.py  plot_600UV.py  plot_930m1.py  plot_930m2.py  plot_930m3.py  plot_930m4.py  plot_930m5.py  plot_930m6.py
goodman_lamps/: __init__.py  goodman_lamps.py  version.py
goodman_lamps/tools/: __init__.py  create_plot.py
