[build_docs]
source-dir = docs/source/
build-dir = docs/_build
all_files = 1

[build_sphinx]
project = 'Goodman Reference Lamp Library'
source-dir = docs/source/
build-dir = docs/_build

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[metadata]
package_name = goodman_lamps
description = Reference comparison lamps for Goodman Pipeline.
long_description = Wavelength-calibrated reference lamps to be used as templates for wavelength calibration by the Goodman Pipeline
author = Simon Torres
author_email = storres@ctio.noao.edu
license = BSD-3-Clause
# url =
edit_on_github = False
github_project = soar-telescope/goodman-lamps-lib
# install_requires = astropy six gwcs scipy
# version should be PEP440 compatible (http://www.python.org/dev/peps/pep-0440)
version = 0.1.0
